# STT2NG

./: .gitmodules  CMakeLists.txt  README.md
Resources/: HitCoordinates.csv  TubeGeometry2.csv  detection.json  tube params.json  tube params2.json
stt2ng/: CMakeLists.txt  config.h.in
stt2ng/include/: chartwidget.h  csvparameterwidget.h  csvreader.h  detectionevent.h  detectioneventreader.h  geometryparameter.h  geometryparameterwidget.h  graphbuilder.h  graphmodel.h  graphscene.h  graphview.h  graphwidget.h  graphwriter.h  hoverablecheckbox.h  mainwindow.h  parametermodel.h  threedscene.h  threedview.h  trajectory.h  visualgraphedge.h  visualgraphnode.h
stt2ng/src/: chartwidget.cpp  csvparameterwidget.cpp  detectioneventreader.cpp  geometryparameter.cpp  geometryparameterwidget.cpp  graphbuilder.cpp  graphmodel.cpp  graphscene.cpp  graphview.cpp  graphwidget.cpp  graphwriter.cpp  hoverablecheckbox.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  parametermodel.cpp  threedscene.cpp  threedview.cpp  visualgraphedge.cpp  visualgraphnode.cpp
